# voicecode

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  com.voicecode.plist  history.py  main.py  overlay.py  postprocessor.py  pyproject.toml  recorder.py  requirements.txt  settings.py  setup_py2app.py  transcriber.py
.claude/: CLAUDE.md
.claude/commands/: fix-voice.md
.claude/skills/fix-voice/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: build.md  index.md  next-actions.md
homebrew/: README.md  voicecode.rb
scripts/: build_app.sh  build_dmg.sh  generate_formula.sh  generate_icons.py  index.md  sign_and_notarize.sh  start.sh
tests/: test_ensure_api_keys.py  test_history.py  test_main.py  test_overlay.py  test_postprocessor.py  test_recorder.py  test_settings.py  test_transcriber.py
